--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <h2>Os Melhores Hambúrgueres da Cidade</h2>
         <p>Venha experimentar nossos deliciosos hambúrgueres artesanais!</p>
-        <img src="hamburguer.jpg" alt="Foto de um hambúrguer delicioso">
+        <img src="hamburguer.png" alt="Foto de um hambúrguer delicioso">
     </main>
 
     <footer>
