--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     </main>
 
     <footer>
-        <p>&copy; Sua Hamburgueria 2023</p>
+        <p>&copy; Hamburgueria do Venazi 2024
+            contato (46)99952-8964
+            localização Rua zacaria Número 512
+        </p>
     </footer>
 
     <script src="script.js"></script>
